# mn-opc-7025

./: .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  DEPLOYMENT.md  README.md  best_credit_model.pkl  coverage.xml  pyproject.toml  pyrightconfig.json  pytest.ini  render.yaml  requirements.txt  requirements_complet_backup.txt  requirements_minimal.txt  requirements_render.txt  test_api_final.py
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  cicd.yml  cleanup.yml  deploy-api-hf.yml  deploy-render.yml  deploy-ui-hf.yml  main-ci-cd.yml  rules-ci.yml  sync-to-hub.yml  test-api.yml  test-streamlit.yml  validate-all.yml
.specstory/history/: 2025-08-28_08-04Z-analyser-le-projet.md  2025-08-28_09-56Z-problèmes-d-importation-dans-le-projet.md  2025-08-28_12-08Z-clarification-sur-les-fichiers-streamlit.md  2025-08-28_13-20Z-améliorer-la-clarté-de-la-présentation.md  2025-08-28_14-04Z-synchroniser-projet-avec-un-repo-git.md  2025-08-28_14-54Z-écrire-du-code-dans-@sync-to-hub-yml.md  2025-08-28_15-07Z-dans-mon-workflow,-j-ai-une-erreur.md  2025-09-02_06-06Z-analyse-de-projet-et-améliorations.md  2025-09-02_06-41Z-pourquoi-#-type-ignore-ne-fonctionne-pas.md  2025-09-02_06-50Z-fixing-type-assignment-error-in-code.md  2025-09-02_06-54Z-auditer-et-corriger-les-erreurs-pandas.md  2025-09-02_07-24Z-annuler-les-modifications-depuis-le-dernier-commit.md  2025-09-02_07-45Z-utilisation-de-black-formatter-dans-le-projet.md  2025-09-02_09-33Z-déployer-une-application-web-gratuitement.md  2025-09-02_12-26Z-changer-le-chemin-d-enregistrement-du-fichier.md  2025-09-03_07-29Z-corriger-l-erreur-dans-fillna.md  2025-09-03_10-17Z-corriger-une-erreur-de-formatage.md  2025-09-12_08-10Z-analyse-détaillée-du-projet-et-préparation-de-la-soutenance.md
.streamlit/: config.toml
api/: __init__.py  app.py  dockerfile  security.py
docs/architecture/: ARCHITECTURE.md
docs/deploiement/: configuration-api-distante.md  deploiement_render_streamlit.md  hf_spaces_config.md  user_guide.md
docs/guides/: README.md  analyse-pertinence-application.md  mlflow_ui_guide.md  validation_guide.md
docs/missions/: Livrables.md  MISSIONS.md
docs/soutenance/: LIVRABLES_FINAUX.md  Nejad_Maxime_6.5_Soutenance_250728.pptx  PLAN_ACTION_MANQUANTS.md  PRESENTATION-V2.md  PRESENTATION-V3.md  PRESENTATION.md  PRESENTION-V2.md  PowerPoint_converted.md  ~$Nejad_Maxime_6.5_Soutenance_250728.pptx
docs/veille/: Comparaison d’une Approche NLP Récente et d’un Random Forest pour le Scoring Home Credit.docx  NOTE_METHODOLOGIQUE_VEILLE_TECHNIQUE.md  Note-veille.pages
mlruns/186361857841028067/: meta.yaml
mlruns/186361857841028067/16e05748c02d421183828715bc27b6ee/: meta.yaml
mlruns/186361857841028067/49fe35f676d643b2bd81cbe246cfc203/: meta.yaml
mlruns/186361857841028067/4e6c4239204b4311b4689ff6b6c6d5a8/: meta.yaml
mlruns/186361857841028067/9b96260dbd9b4deabb5291b2b971ed68/: meta.yaml
mlruns/186361857841028067/a23a6c671f2c419ab87035fbfe62a67a/: meta.yaml
mlruns/186361857841028067/a83977294abf40beac45a27cf4d42e4b/: meta.yaml
mlruns/186361857841028067/ae09f3fdaea642d9a4c33e6a0a116a81/: meta.yaml
mlruns/186361857841028067/cd5365a723d94f409bbe3750206faaef/: meta.yaml
mlruns/186361857841028067/e64297ae710e4698ba3d8868a02900d8/: meta.yaml
mlruns/199911806239249832/: meta.yaml
mlruns/406156772973539882/: meta.yaml
mlruns/models/mn-opc-7025/: meta.yaml
models/: best_credit_model.pkl  label_encoders.pkl
notebooks/: 01_data_exploration.py  02_feature_engineering.py  03_model_analysis.py  04_shap_analysis.py  __init__.py
src/: business_score.py  complete_feature_engineering.py  data_drift_detection.py  enhanced_data_analysis.py  feature_engineering.py  feature_engineering_complete.py  feature_importance.py  mlflow_setup.py  model_training.py
streamlit_app/: README.md  dockerfile  feature_mapping.py  main.py  packages.txt  requirements-minimal.txt  requirements.txt  setup.sh  streamlit_app.py
streamlit_app/.streamlit/: config.toml  requirements.txt  secrets.toml
tests/: __init__.py  conftest.py  run_tests.py  test_feature_alignment.py  test_feature_alignment_fixed.py  test_pipeline_avec_modele.py  test_simple_feature_alignment.py  test_streamlit_integration.py  test_streamlit_simple.py
tests/api/: __init__.py  test_api_endpoints.py
tests/integration/: test_pipeline_integration.py
tests/performance/: __init__.py  test_api_performance.py  test_simple_performance.py
tests/security/: test_simple_security.py
tests/unit/: test_business_score.py  test_data_validation.py  test_feature_engineering.py
tools/: push_to_hf.py
(+149 files in other folders)
